<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jaimearturo.mascotas.AboutActivity">

   <include android:id="@+id/miActionBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        layout="@layout/action_bar_mascota">
    </include>
    <TextView
        android:id="@+id/tvSpace"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text=""
        android:textAlignment="center"
        android:layout_alignParentBottom="false"
        android:layout_below="@id/miActionBar"
        />
        <TextView
            android:id="@+id/tvEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvEmpresa"
            android:textAlignment="center"
            android:layout_alignParentBottom="false"
            android:layout_below="@id/tvSpace"
            />
    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvVersion"
        android:textAlignment="center"
        android:layout_below="@id/tvEmpresa"
        />
    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvYear"
        android:textAlignment="center"
        android:layout_below="@id/tvVersion"
        />
</RelativeLayout>
